tests/fixtures/errors/invalid_preproc_builtin_in_log.puml
@startuml
!log %boolval("x")
Alice -> Bob: unreachable
@enduml
